[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/environment/tilemap.png" type="Texture" id=1]
[ext_resource path="res://Scripts/main.gd" type="Script" id=2]
[ext_resource path="res://Assets/items/major-arcana/major_spread.png" type="Texture" id=3]
[ext_resource path="res://Assets/environment/select_btn.png" type="Texture" id=4]
[ext_resource path="res://Assets/environment/arrow_btn.png" type="Texture" id=5]
[ext_resource path="res://Assets/environment/titleblank.png" type="Texture" id=6]
[ext_resource path="res://Assets/audio/2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/audio/Eggy Toast - Misunderstood.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/audio/sound_effects/270315__littlerobotsoundfactory__menu_navigate_03.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/items/major-arcana/borders.png" type="Texture" id=10]
[ext_resource path="res://Scenes/pause_menu.tscn" type="PackedScene" id=11]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=1]
0/name = "tilemap.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilemap.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tilemap.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 128, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tilemap.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 128, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tilemap.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 2 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tilemap.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 4 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 5 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilemap.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/occluder = SubResource( 6 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="rooms" type="Node" parent="."]

[node name="pickups" type="Node" parent="."]

[node name="enemies" type="Node" parent="."]

[node name="player" type="Node" parent="."]

[node name="MainCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
light_mask = 3
tile_set = SubResource( 1 )
format = 1

[node name="ArcanaChooser" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ArcanaChooser"]
margin_left = -256.0
margin_top = -150.0
margin_right = 768.0
margin_bottom = 450.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Cards" type="HBoxContainer" parent="ArcanaChooser"]
margin_left = -501.0
margin_top = -206.0
margin_right = -461.0
margin_bottom = -166.0
rect_pivot_offset = Vector2( 329, 99 )

[node name="Fool" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 500, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 1

[node name="HighPriestess" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 600, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 2

[node name="Magician" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 700, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 3

[node name="Empress" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 800, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 4

[node name="Moon" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 900, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 5

[node name="Wheel" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1000, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 6

[node name="Hanged" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1100, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 7

[node name="Chariot" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1200, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 8

[node name="Hierophant" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1300, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 9

[node name="Lovers" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1400, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 10

[node name="Emperor" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1500, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 11

[node name="Sun" type="Sprite" parent="ArcanaChooser/Cards"]
position = Vector2( 1600, 200 )
texture = ExtResource( 3 )
hframes = 13
frame = 12

[node name="CardBack" type="Sprite" parent="ArcanaChooser"]
position = Vector2( -1, -9 )
texture = ExtResource( 10 )

[node name="Button" type="TextureButton" parent="ArcanaChooser"]
margin_left = -66.25
margin_top = 71.0
margin_right = 183.75
margin_bottom = 157.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )

[node name="Right" type="TextureButton" parent="ArcanaChooser"]
margin_left = 33.75
margin_top = 62.0
margin_right = 126.75
margin_bottom = 148.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 5 )

[node name="Left" type="TextureButton" parent="ArcanaChooser"]
margin_left = -41.25
margin_top = 62.0
margin_right = 51.75
margin_bottom = 148.0
rect_scale = Vector2( -0.75, 0.75 )
texture_normal = ExtResource( 5 )

[node name="SFX" type="AudioStreamPlayer" parent="ArcanaChooser"]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="PauseMenu" parent="." instance=ExtResource( 11 )]
visible = false
margin_left = -1.0
margin_right = -1.0

[node name="Menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Combat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="pressed" from="ArcanaChooser/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ArcanaChooser/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="ArcanaChooser/Left" to="." method="_on_Left_pressed"]
